infra/k8s/minikube/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
        - name: api-container
          image: k8s-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

        - name: api-nginx-container
          image: nginx:1.25-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: api-nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
      - name: api-nginx-conf
        configMap:
          name: api-nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
  selector:
    matchLabels:
      app: api-app
