infra/k8s/minikube/elasticsearch-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-statefulset
spec:
  serviceName: elasticsearch-service
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch-app
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: elasticsearch-container
          image: elasticsearch:8.6.2
          ports:
            - containerPort: 9200
              name: es-cli
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - mountPath: "/usr/share/elasticsearch/data"
              name: elasticsearch-pvc
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"

  selector:
    matchLabels:
      app: elasticsearch-app
  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1024Mi
