infra/k8s/minikube/etl-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etl-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: etl-app
    spec:
      containers:
        - name: etl-container
          image: k8s-etl:latest
          imagePullPolicy: IfNotPresent
  selector:
    matchLabels:
      app: etl-app
