infra/k8s/minikube/fileapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileapi-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: fileapi-app
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
        prometheus.io/scrape: "true" 
    spec:
      containers:
        - name: fileapi-container
          image: oruchkin/k8s-fileapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
  selector:
    matchLabels:
      app: fileapi-app
