infra/k8s/minikube/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak-app
    spec:
      containers:
        - name: keycloak-container
          image: k8s-keycloak:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      app: keycloak-app
