infra/k8s/minikube/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
spec:
  serviceName: postgres-service
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
        - name: postgres-container
          image: postgres:16
          ports:
            - containerPort: 5432
              name: postgres-cli
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data/"
              name: postgres-pvc
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "sleep 20 && \
                PGPASSWORD=$POSTGRES_PASSWORD psql -U $POSTGRES_USER -d postgres -c \"CREATE DATABASE \\\"$ADMIN_POSTGRES_DB\\\" OWNER \\\"$POSTGRES_USER\\\";\" && \
                PGPASSWORD=$POSTGRES_PASSWORD psql -U $POSTGRES_USER -d $ADMIN_POSTGRES_DB -c \"CREATE SCHEMA IF NOT EXISTS content;\""]

  selector:
    matchLabels:
      app: postgres-app
  volumeClaimTemplates:
    - metadata:
        name: postgres-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
