infra/k8s/minikube/redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-statefulset
spec:
  serviceName: redis-service
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-app
    spec:
      containers:
        - name: redis-container
          image: redis
          ports:
            - containerPort: 6379
              name: redis-cli
          volumeMounts:
            - mountPath: "/data"
              name: redis-pvc
          command: ["redis-server", "--save", "20", "1", "--loglevel", "warning"]

  selector:
    matchLabels:
      app: redis-app
  volumeClaimTemplates:
    - metadata:
        name: redis-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
