infra/k8s/minikube/fileapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileapi-service
spec:
  type: ClusterIP
  selector:
    app: fileapi-app
  ports:
    - protocol: TCP
      port: 8000
