infra/k8s/minikube/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: minio-app
