infra/k8s/minikube/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: mongo-app
