infra/k8s/minikube/notifications-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
spec:
  type: ClusterIP
  selector:
    app: notifications-app
  ports:
    - protocol: TCP
      port: 8000
      name: notifications-svc-api
    - protocol: TCP
      port: 8765
      name: notifications-svc-socket
