infra/k8s/minikube/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  selector:
    app: postgres-app
  ports:
    - protocol: TCP
      port: 5432
      name: postgres-db
