infra/k8s/minikube/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: redis-app
